Add onRequestPermissionsResult & Log

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Runway_curiosity</string>
     <string name="latitude_label">Latitude</string>
     <string name="longitude_label">Longitude</string>
+    <string name="no_location_detected">Sorry, no location is detected</string>
+    <string name="permission_denied_explanation">No any data is recording</string>
 </resources>
