--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="status" >""</string>
     <string name="permission_rationale">ocation permission is needed for core functionality</string>
     <string name="settings">Setting</string>
+    <string name="start_update">Record</string>
+    <string name="stop_update">Stop</string>
 </resources>
