--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="settings">Setting</string>
     <string name="start_update">Record</string>
     <string name="stop_update">Stop</string>
+    <string name="view_record">Pathway</string>
 </resources>
